--- a/.gitignore
+++ b/.gitignore
@@ -10,22 +10,22 @@ Thumbs.db
 
 # files for the dex VM
 *.dex
-  
+
 # Java class files
 *.class
-  
+
 # generated files
 bin/
 gen/
 build/
-  
+
 # Local configuration file (sdk path, etc)
 local.properties
-  
+
 # Eclipse project files
 .classpath
 .project
-  
+
 # Android Studio
 .idea
 .gradle
@@ -39,3 +39,8 @@ build
 *.ipr
 *~
 *.swp
+
+debug.jks
+private_key.pepk
+release.jks
+signing.properties
