--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
 }
+apply plugin: 'com.google.firebase.crashlytics'
+
+
+loadExtraProperties "${rootDir}/signing.properties"
 
 android {
     compileSdkVersion 30
@@ -19,15 +23,44 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+
+        //comment out this whole 'signingConfigs' to bypass signing errors
+
+        release project.hasProperty('RELEASE_STORE_FILE') ? {
+            storeFile rootProject.file("${rootDir}/${RELEASE_STORE_FILE}")
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        } : {}
+
+        debug project.hasProperty('DEBUG_STORE_FILE') ? {
+            storeFile rootProject.file("${rootDir}/${DEBUG_STORE_FILE}")
+            storePassword DEBUG_STORE_PASSWORD
+            keyAlias DEBUG_KEY_ALIAS
+            keyPassword DEBUG_KEY_PASSWORD
+        } : {}
+    }
+
     buildTypes {
         debug {
+            applicationIdSuffix ".debug"
+            signingConfig signingConfigs.debug
+            buildConfigField "String", "BASE_URL", "\"https://v2.jokeapi.dev/joke/\""
+            buildConfigField "String", "PREF_NAME", "\"joky_preferences\""
             debuggable true
         }
+
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+            minifyEnabled true
+            debuggable false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", "\"https://v2.jokeapi.dev/joke/\""
+            buildConfigField "String", "PREF_NAME", "\"joky_preferences\""
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -38,6 +71,15 @@ android {
 }
 
 dependencies {
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    //crashlytics
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    //cloud messaging
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-installations-ktx:16.3.4'
+
 
     // Added Dependencies
     implementation 'android.arch.lifecycle:extensions:1.1.1'
@@ -56,3 +98,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+def loadExtraProperties(String fileName) {
+    if (new File(fileName).exists()) {
+        def props = new Properties()
+        props.load(new FileInputStream(fileName))
+
+        props.each { key, val -> project.ext.set(key, val)
+        }
+    }
+}
+apply plugin: 'com.google.gms.google-services'
