--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 loadExtraProperties "${rootDir}/signing.properties"
 
 android {
+    def version = new Version("${rootDir}/version.properties")
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -17,8 +18,8 @@ android {
         applicationId "com.vaskevicius.android.joky"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode version.getVersionCode()
+        versionName version.getVersion()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -109,3 +110,54 @@ def loadExtraProperties(String fileName) {
     }
 }
 apply plugin: 'com.google.gms.google-services'
+
+class Version {
+
+    private String fileName
+    private File versionFile
+    private Properties properties
+    private int major
+    private int minor
+    private int patch
+    private int number
+    private String suffix
+    private boolean nightly
+
+    Version(String fileName) {
+        this.fileName = fileName
+        load()
+    }
+
+    def load() {
+        versionFile = new File(fileName)
+        if (versionFile.canRead()) {
+            properties = new Properties()
+            properties.load(new FileInputStream(versionFile))
+
+            major = properties['MAJOR'].toInteger()
+            minor = properties['MINOR'].toInteger()
+            patch = properties['PATCH'].toInteger()
+            number = properties['BUILD'].toInteger()
+            suffix = properties['SUFFIX'].toString()
+            nightly = Boolean.parseBoolean(properties['NIGHTLY'].toString())
+        } else {
+            throw new GradleException("Could not read version file")
+        }
+    }
+
+    String getVersion() {
+        return "${major}.${minor}" + (patch != 0 ? ".${patch}" : "")
+    }
+
+    String getBuild() {
+        return number.toString()
+    }
+
+    String getSuffix() {
+        if (nightly) return "-${suffix}" else return "-${suffix}${number}"
+    }
+
+    int getVersionCode() {
+        major * 1000000 + minor * 10000 + patch * 100 + number
+    }
+}
